fixing spacing

--- a/queries.css
+++ b/queries.css
@@ -1,8 +1,7 @@
 /*MEDIA QUERIES*/
 
-/*BELOW 1440px [89em*16px] (Smaller Laptop [macbook air])*/
-
-@media (max-width: 90em) {
+/*BELOW 1424px [89em*16px] (Smaller Laptop [macbook air])*/
+@media (max-width: 89em) {
   .gallery-container {
     max-width: 120rem;
   }
@@ -11,10 +10,7 @@
   }
   .grid--4--cols {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-  }
-  .card {
-    grid-template-rows: 1fr 1.45fr 0.25fr;
+    /* grid-template-rows: repeat(2, 1fr); */
   }
   .carousel-track-container {
     height: 52rem;
@@ -22,14 +18,10 @@
   }
 }
 
-/*BELOW 1089 [67em*16px] (Landscape Tablet Screen)*/
-
-@media (max-width: 69em) {
+/*BELOW 1089 [68rem*16px] (Landscape Tablet Screen)*/
+@media (max-width: 68rem) {
   html {
-    font-size: 55%;
-  }
-  .header {
-    padding-top: 2rem;
+    font-size: 50%;
   }
   .container {
     max-width: 80rem;
@@ -43,16 +35,6 @@
   .PS {
     font-size: 1.6rem;
   }
-  .gallery-container {
-    max-width: 100rem;
-    margin: 0 auto;
-  }
-  .tertiary-heading {
-    font-size: 2.4rem;
-  }
-  .card {
-    grid-template-rows: 0.85fr 2fr 0.25fr;
-  }
   .carousel-track-container {
     height: 42rem;
   }
@@ -65,9 +47,6 @@
 @media (max-width: 62em) {
   html {
     font-size: 55%;
-  }
-  .card {
-    grid-template-rows: 1fr 1.65fr 0.25fr;
   }
   .carousel-track-container {
     height: 40rem;
@@ -87,11 +66,8 @@
     max-width: 95rem;
     margin: 0 auto;
   }
-  .card {
-    grid-template-rows: 1fr 1.75fr 0.25fr;
-  }
   .grid--4--cols {
-    column-gap: 1.2rem;
+    grid-template-columns: repeat(2, 1fr);
   }
   .carousel-track-container {
     height: 38rem;
@@ -101,11 +77,14 @@
 
 /*BELOW 624 [39em*16px] (Landscape Tablet Screen)*/
 @media (max-width: 39em) {
+  html {
+    font-size: 43%;
+  }
   .navigation {
     margin-bottom: 5.8rem;
   }
   .container {
-    max-width: 65rem;
+    max-width: 80rem;
   }
   .u-bahn-info p,
   .s-bahn-info p {
@@ -114,7 +93,6 @@
   .train-info img {
     height: 16px;
   }
-
   .hero-section {
     margin-bottom: 4.6rem;
   }
@@ -126,8 +104,11 @@
   }
   .section-item {
     margin-bottom: 4.6rem;
+    grid-template-columns: 32rem 1fr;
   }
-
+  /* .section-img{
+hei
+  } */
   .grid--4--cols {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(8, 1fr);
@@ -135,17 +116,6 @@
   }
   .gallery-container {
     max-width: 65rem;
-  }
-  .card {
-    display: grid;
-    flex-direction: row;
-    grid-template-rows: 0.5fr 0.55fr auto;
-    padding: 2rem;
-    transition: all 0.3s;
-    line-height: 1.5;
-    font-size: 1.8rem;
-    font-weight: 400;
-    letter-spacing: 1px;
   }
   .card-text-box {
     padding: 2.4rem 1rem 1.2rem 0rem;
@@ -164,23 +134,22 @@
 /*BELOW 528 [33em*16px] (Landscape Tablet Screen)*/
 @media (max-width: 33em) {
   html {
-    font-size: 40%;
+    font-size: 35%;
   }
-  .hero-section h1 {
-    font-size: 9rem;
-    letter-spacing: -4px;
-  }
+  .hero-section h1,
   .hero-neukolln h1 {
-    letter-spacing: -6px;
-    font-size: 11rem;
+    font-size: 9rem;
+    letter-spacing: -3.6px;
   }
-
   .container {
     max-width: 65rem;
     margin: 0 auto;
   }
   .grid--2--cols {
     grid-template-columns: 1fr;
+  }
+  .section-item {
+    margin-bottom: 2rem;
   }
   .section-item-text-box {
     padding-bottom: 4.8rem;
@@ -191,44 +160,36 @@
     display: inline;
   }
   .section-item-text {
-    padding-top: 1rem;
-    padding-bottom: 1.8rem;
+    padding-top: 1.8rem;
+    padding-bottom: 2.4rem;
   }
-  .hero-section p {
-    max-width: 65vw;
-  }
-  .kiez-intro {
-    margin-bottom: 0;
+  .section-img-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
-/*BELOW 368 [20em*16px] (Landscape Tablet Screen)*/
-@media (max-width: 23em) {
+/*BELOW 368 [23rem*16px] (Landscape Tablet Screen)*/
+@media (max-width: 23rem) {
   .navigation {
-    margin-bottom: 4.2rem;
+    margin-bottom: 2.2rem;
   }
-  .header {
-    padding-top: 0;
+  .button-like {
+    padding: 4px 12px;
+  }
+  .hero-section {
+    justify-content: flex-start;
+    padding-top: 4rem;
   }
   .hero-section h1,
   .hero-neukolln h1 {
-    letter-spacing: -4px;
-    font-size: 8.6rem;
+    letter-spacing: -2px;
+    font-size: 8rem;
   }
   .hero-section p {
-    max-width: 85vw;
-    font-weight: 400;
-    letter-spacing: 0.7px;
+    max-width: 80vw;
   }
-  .PS {
-    font-weight: 450;
-  }
-  .hero-section {
-    gap: 3.2rem;
-  }
-  /* .container {
-    max-width: 85vw;
-  } */
   .u-bahn-info p,
   .s-bahn-info p {
     font-size: 1.75rem;
@@ -236,23 +197,10 @@
   .train-info img {
     height: 12px;
   }
-  .kiez-intro {
-    max-width: 100vw;
-    padding: 0rem 4.8rem 2.2rem 4.8rem;
-  }
-  .card {
-    padding-bottom: 4.2rem;
-    grid-template-rows: 0.5fr 0.75fr auto;
-  }
-  .tertiary-heading {
-    font-size: 4.5rem;
-  }
   .secondary-heading {
     font-size: 8.6rem;
   }
   .card-text-box {
-    gap: 1.8rem;
-    padding: 2.4rem 1rem 1rem 1.2rem;
     letter-spacing: 0.4px;
     line-height: 1.75;
   }
@@ -272,32 +220,19 @@
     border-bottom: 1px solid rgba(134, 130, 130, 0.249);
     grid-template-rows: repeat(3, auto);
     justify-items: center;
+    gap: 2.8rem;
   }
   .section-item-text-box {
     padding-bottom: 1.2rem;
+    gap: 2rem;
   }
-
   .section-item:last-child {
     border-bottom: none;
   }
   .carousel-nav {
     display: none;
   }
-
-  .section-btn {
-    margin-top: 3rem;
-    grid-row: 3;
-    padding: 1.8rem;
-  }
-  .btn.section--btn {
-    font-size: 2.6rem;
-    padding: 2.8rem;
-  }
-
-  .secondary-heading {
-    text-align: center;
-  }
   .section-img {
-    max-width: 100%;
+    max-width: 80%;
   }
 }
